--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,212 +1,191 @@
-/***** HEADER CSS NOT REQUIRED FOR DEMO *****/
-/***** To keep header consistent, do not edit ****/
-#safe-ribbon {
-	position: relative;
-	display: block;
-	float:right;
-	margin-bottom: -2rem;
-	height: 2rem;
-	z-index: 2000;
+/*** Global Styles ***/
+html {
+  overflow: -moz-scrollbars-vertical;
+  overflow-y: scroll;
 }
-
-#safe-ribbon a{
-  background:#E98300;
-  color:#fff;
-  text-decoration:none;
-  font-family:arial, sans-serif;
-  text-align:center;
-  font-weight:bold;
-  padding: 0 5px;
-  font-size:1rem;
-  line-height:2rem;
-  transition: background 0.5s;
-  display: block;
-}
-
-#safe-ribbon a:hover{
-  background:#DA7B00;
-  color:#fff;
-}
-
-#safe-ribbon a::before,#safe-ribbon a::after{
-  content:"";
-  width:100%;
-  display:block;
-  position:absolute;
-  top:1px;
-  left:0;
-  height:1px;
-  background:#ffffff;
-}
-
-#safe-ribbon a::after{
-  bottom:1px;
-  top:auto;
-}
-
-@media screen and (min-width:979px){
-  #safe-ribbon{
-    position:absolute;
-    display:block;
-    top:0;
-    right:0;
-    width:200px;
-    overflow:hidden;
-    height:200px;
-  }
-  #safe-ribbon a{
-    width:200px;
-    position:absolute;
-    top:60px;
-    right:-60px;
-    transform:rotate(45deg);
-    -webkit-transform:rotate(45deg);
-    box-shadow:0px 1px 4px rgba(0,0,0,0.8);
-    padding: 5px 40px;
-  }
-}
-
-
 body {
-  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
-  font-family: verdana;
-  padding-top: 40px;
+  font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #4A443D;
 }
-
-.brand{
+#nav-top {
+  height: 2rem;
+  background: #d9d6d4;
+}
+#nav-top a  {
+  line-height: 2rem;
+  color: #82786f;
+  padding-right: 8px;
+  padding-left: 6px;
+  border-right: 1px solid #aaa;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 300;
+  text-overline-width: normal;
+  letter-spacing: .5px;
+}
+.navbar-inner .container a:first-child {
+  padding-left: 0px !important;
+}
+.navbar-brand {
   color: #ffffff !important;
   font-weight: 300 !important;
   text-shadow: none !important;
+  font-size: 1.5rem;
 }
-
-@media screen and (max-width: 300px) {
-	.hidden-tiny {
-		display: none;
-	}
+.text-white {
+  text-decoration: none;
+  color: white;
 }
-
+.nav {
+  display: inline;
+}
 .navbar {
-	margin:0;
-	position: fixed;
-}
-
-.navbar-inner {
-  background-color: #7AB800;
+  margin:0;
+  position: relative;
+  background-color: hsla(31, 96%, 51%, 0.6);
   background-image: none;
 }
-
-.navbar-fixed-top .navbar-inner, .navbar-fixed-bottom .navbar-inner {
-	padding: 0;
-
+.navbar-toggler {
+  float: right;
 }
-
-.nav-collapse.in.collapse {
-	padding-bottom: 5px;
+.navbar li {
+  padding-right:8px;
+  padding-left: 8px;
 }
-
-.hero-unit {
-	margin-top: 2rem;
+#navbarDropdown a {
+  line-height: 2rem;
+  color: #82786f;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 320;
+  text-overline-width: normal;
+  letter-spacing: .4px;
 }
-
-/**** End of Header CSS ****/
-
-/*** Insert tutorial or demo specific CSS here ***/
-#dropzone {
-  font-weight: bold;
-}
-
-#dropzone.in {
-
-  font-size: larger;
-}
-
-#dropzone.hover {
-  background: darkgrey;
-}
-
-#dropzone.fade {
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -ms-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
-  transition: all 0.3s ease-out;
-  opacity: 1;
-}
-
-#dropText{
+.dropdown-menu {
   text-align: center;
 }
+.dropdown {
+  border-left: 1px solid #eee;
+}
+@media screen and (max-width: 700px) {
+  .hidden-tiny {
+    display: none;
+  }
+}
+h1 {
+  font-family: inherit;
+  font-weight: 100;
+  line-height: 1.1;
+  color: inherit;
+  font-size: 2rem;
+  white-space: nowrap;
+  margin-top: .4rem;
+  margin-bottom: .4rem;
+}
+p {
+  font-family: inherit;
+  font-weight: 150;
+  line-height: 1.4rem;
+  color: inherit;
+  font-size: 1.1rem;
+}
+p a {
+  color:hsla(31, 96%, 51%, 0.7);
+}
+p.center {
+  text-align: center;
+}
+.content{
+  overflow-y: auto;
+  position: absolute;
+}
+.width-40 {
+  width: 40%;
+  margin: 0 auto;
+}
+.width-20 {
+  width: 20%;
+  margin: 0 auto;
+}
+.btn {
+  font-style: inherit;
+  text-decoration: none;
+  font-size: 1rem;
+  font-weight: 320;
+  letter-spacing: .5px;
+  background-color: #7f7e7b;
+}
+.title {
+  text-align: center;
+  padding-top: .75rem;
+  position: relative;
+}
+footer { 
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 4rem; /* Set the fixed height of the footer here */
+  line-height: 4rem; /* Vertically center the text there */
+ }
+ footer a, a:hover {
+  color: inherit;
+  text-decoration: none;
+ }
+ .fme {
+  width:2.2rem;
+  height:2.2rem;
+ }
+/**** End of Global Styles ****/
 
-#results{
+/*** Demo specific Styles ***/
+#dropzone.hover {
+  background: #d9d6d4;
+}
+#dropText {
   text-align: center;
   font-size: 1rem;
-  padding-top: 100px;
+  font-weight: 100;
+  font-family: inherit;
+  color: inherit;
 }
-
-#geocodeFormDiv{
-  padding-left: 100px;
-}
-
-.geocodeInstructions{
-  font-style: italic;
-  color: DimGrey;
-}
-
-#mapDiv{ 
-  height:500px;
-  position:relative;
-}
-
-#mapDiv img{
-  max-width: none;
-}
-
-#loadingImg{
-  display:none;
-  position:absolute;
-  left:50%;
-  top:50%;
-  z-index:10002;
-}
-
-#form{
-  position:absolute;
-  left:30%;
+form {
   padding-top: 25px;
+  margin: 0 auto;
+  width: 30%;
+  font-style: inherit;
+  text-decoration: none;
+  font-weight: 320;
 }
-
-#backBtn{
+.displayMap {
+  padding-top: 2rem;
+}
+.displayMap button {
+  margin: 0 auto;
+  font-style: inherit;
+  text-decoration: none;
+  font-weight: 320;
+  font-size: 1.1rem;
+}
+#mapDiv { 
+  height:400px;
+  position:relative;
+  margin: 0 auto;
+  padding-top: 1rem;
+  border:
+}
+#mapDiv img {
+  max-width: none;
+  margin: 0 auto;
+}
+#loadingImg {
+  display:none;
+  position:relative;
+  align: center;
+  top:30%;
+}
+#backBtn {
   float: left;
   position: absolute;
-  top: 50%;
+  top: 70%;
+  padding-left: 2rem;
 }
-
-.title{
-  text-align: center;
-}
-
-#refreshBtn{
-  padding-left:9px;
-  position: absolute;
-  top: 50%;
-}
-
-.round-button {
-    display:block;
-    width:50px;
-    height:50px;
-    line-height:50px;
-    border: 2px solid #f5f5f5;
-    border-radius: 50%;
-    color:#f5f5f5;
-    text-align:center;
-    text-decoration:none;
-    background: ##808080;
-    box-shadow: 0 0 3px gray;
-    font-size:20px;
-    font-weight:bold;
-}
-.round-button:hover {
-    background: lightgrey;
-}
-
